<resources>
    <string name="app_name">SHOP ĐỒ CŨ</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="title_activity_home_page">ShopDoCu.vn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">Tìm kiếm</string>
    <string name="search_hint"> Tìm kiếm sản phẩm</string>
    <string name="category_text">Chọn danh mục</string>
    <string name="orderBy_text">Sắp xếp theo</string>
    <string name="product_not_found_1">Không tìm thấy sản phẩm nào.</string>
    <string name="product_not_found_2">Hãy thử lại từ khóa khác!</string>
    <string name="product_not_found">Không tìm thấy sản phẩm cho:</string>
    <string name="add_product_picture">Hình ảnh sản phẩm</string>
    <string name="add_product_name">Tên sản phẩm</string>
    <string name="add_product_category">Danh mục</string>
    <string name="add_exchange_address">Địa điểm giao dịch</string>
    <string name="add_product_price">Giá bán (Tùy chọn)</string>
    <string name="add_product_description">Mô tả về sản phẩm (Tùy chọn)</string>
    <string name="no_product_description">KHÔNG CÓ MÔ TẢ VỀ SẢN PHẨM NÀY</string>
    <string name="add_customer_name">Tên khách hàng</string>
    <string name="add_customer_address">Địa chỉ</string>
    <string name="add_customer_email">Email</string>
    <string name="add_customer_phone">Điện thoại</string>
    <string name="continue_button">TIẾP TỤC</string>
    <string name="request_for_sell_button">ĐĂNG BÁN</string>
    <string name="progress_dialog_infor">Thông tin</string>
    <string name="progress_dialog_msg">Vui lòng chờ...</string>
    <string-array name="search_category_spinner">
    <item>TẤT CẢ</item>
	
	<item>NỘI NGOẠI THẤT GIA ĐÌNH</item>
    <item>Bàn</item>
     <item>Ghế</item>
	<item>Tủ, kệ</item>
	<item>Giường</item>

        <item>QUÁN CÀ PHÊ</item>
        <item>Bàn cà phê</item>
        <item>Ghế cà phê</item>
        <item>Quầy pha chế</item>
        
        <item>ĐỒ VĂN PHÒNG</item>
        <item>Bàn văn phòng</item>
        <item>Ghế văn phòng</item>
        <item>Tủ văn phòng</item>

        <item>ĐỒ QUÁN ĂN</item>
        <item>Bàn quán ăn</item>
        <item>Ghế quán ăn</item>
        <item>Tủ đông, tủ lạnh</item>

        <item>ĐỒ KHÁCH SẠN</item>
        <item>Giường khách sạn</item>
        <item>Tủ khách sạn</item>

	<item>ĐỒ ĐIỆN TỬ, ĐIỆN MÁY</item>
        <item>Tivi</item>
        <item>Loa</item>
        <item>Dàn karaoke</item>
        <item>CÁC LOẠI KHÁC </item>
    </string-array>

    <string-array name="orderBy_spinner">
        <item>Giá tăng dần</item>
        <item>Giá giảm dần</item>
    </string-array>
    <string name="title_activity_request_sell">ĐĂNG BÁN</string>
    <string name="request_sell_product_tab">Thông tin sản phẩm</string>
    <string name="request_sell_customer_tab">Thông tin liên hệ</string>
    <string name="prevent_special_characters">abcdefghijklmnopqrstuvwxyz
                                                ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789</string>
    <string-array name="rs_category_spinner">
        <item>NỘI NGOẠI THẤT GIA ĐÌNH</item>
        <item>Bàn</item>
        <item>Ghế</item>
        <item>Tủ, kệ</item>
        <item>Giường</item>

        <item>QUÁN CÀ PHÊ</item>
        <item>Bàn cà phê</item>
        <item>Ghế cà phê</item>
        <item>Quầy pha chế</item>

        <item>ĐỒ VĂN PHÒNG</item>
        <item>Bàn văn phòng</item>
        <item>Ghế văn phòng</item>
        <item>Tủ văn phòng</item>

        <item>ĐỒ QUÁN ĂN</item>
        <item>Bàn quán ăn</item>
        <item>Ghế quán ăn</item>
        <item>Tủ đông, tủ lạnh</item>

        <item>ĐỒ KHÁCH SẠN</item>
        <item>Giường khách sạn</item>
        <item>Tủ khách sạn</item>

        <item>ĐỒ ĐIỆN TỬ, ĐIỆN MÁY</item>
        <item>Tivi</item>
        <item>Loa</item>
        <item>Dàn karaoke</item>

        <item>CÁC LOẠI KHÁC </item>
    </string-array>
    <string name="product_name_require">Vui lòng nhập Tên sản phẩm!</string>
    <string name="place_exchange_require">Vui lòng nhập Địa điểm giao dịch!</string>
    <string name="customer_name_require">Vui lòng nhập Tên của bạn!</string>
    <string name="customer_address_require">Vui lòng nhập Địa chỉ!</string>
    <string name="customer_email_require">Vui lòng nhập Email!</string>
    <string name="customer_email_wrong">Email không hợp lệ!</string>
    <string name="customer_phone_require">Vui lòng nhập Số điện thoại!</string>
    <string name="confirm_rs_msg">Bạn chắc chắn muốn đăng bán?</string>
    <string name="confirm_rs_button">Đăng bán</string>
    <string name="cancel_rs_button">Quay lại</string>
    <string name="confirm_rs_msg_is_success">Đăng bán thành công!</string>
    <string name="confirm_rs_msg_is_fail">Có lỗi xảy ra. Vui lòng thử lại!</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">example: example@example.com</string>
    <string name="Phone"></string>
    <string name="button_finish">Finish</string>
    <string name="dateofbirth">01/01/1900</string>
    <string name="money_unit">VNĐ</string>

    // PRODUCT DETAIL ACTIVITY STRING
    <string name="product_description">Chi tiết sản phẩm</string>
    <string name="buy_button">MUA NGAY</string>
    <string name="add_to_cart_button">Thêm vào giỏ hàng</string>
    <string name="cart_title">Giỏ hàng của bạn</string>
    <string name="add_to_cart_message">Đã thêm vào giỏ hàng</string>
    <string name="add_to_favorite_message">Đã thêm vào danh sách yêu thích</string>

    // CART ACTIVITY STRING
    <string name="product_name_column_title">Sản phẩm</string>
    <string name="product_quantity_column_title">Số lượng</string>
    <string name="total_product_title">TỔNG CỘNG</string>
    <string name="product"> sản phẩm</string>
    <string name="order_button">ĐẶT HÀNG</string>
    <string name="checkout_button">THANH TOÁN</string>
    <string name="delete_cart_confirm">Bạn có muốn xóa sản phẩm này?</string>
    <string name="delete_confirm_button">Xóa</string>
    <string name="cart_has_no_product">Bạn chưa có sản phẩm nào trong giỏ hàng!</string>

    // CHECKOUT FRAGMENT STRING
    <string name="checkout_1_title">Thanh toán</string>
    <string name="send_to">Gửi tới:</string>

    // CONFIRMATION 1 FRAGMENT STRING
    <string name="confirmation_button">Xác nhận thanh toán</string>
    <string name="total_title">Thành tiền</string>
    <string name="vat_contain">(Đã bao gồm VAT)</string>
    <string name="shipping_cost">Phí vận chuyển</string>
    <string name="free_cost">Miễn phí</string>
    <string name="customer_info_title">Địa chỉ nhận hàng</string>
    <string name="quantity_item">Số lượng: </string>
    <string name="total_item">Tống giá: </string>
    <string name="checkout_confirm_message">Xác nhận đặt hàng?</string>
    <string name="ok_button">Đồng ý</string>

    // CONFIRMATION 2 FRAGMENT STRING
    <string name="back_to_home_button">Trở về trang chủ</string>
    <string name="thankful_message">Cảm ơn bạn đã đặt hàng</string>
    <string name="confirmation_message_1">Chúng tôi sẽ liên hệ với bạn
        trong thời gian sớm nhất. </string>
    <string name="confirmation_message_2">Liên hệ qua hotline: 0123456789 nếu bạn cần chúng tôi hỗ trợ. </string>
    <string name="thankyou_message">Xin cảm ơn.</string>

    // SEEN PRODUCT ACTIVITY STRING
    <string name="title_seen_activity">Sản phẩm đã xem</string>

    // FAVORITE PRODUCT ACTIVITY STRING
    <string name="title_favorite_activity">Sản phẩm yêu thích</string>

    <string name="take_product_photo_action">Chụp hình sản phẩm</string>
    <string name="choose_product_photo_action">Chọn hình từ thư viện</string>

    // SELL
    <string name="sell_confirm_tittle">Bạn đã đăng bán thành công!</string>
</resources>
