<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightWhite">

    <RelativeLayout
        android:id="@+id/cart_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border">


        <TextView
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sell_confirm_tittle"
            android:id="@+id/thankful_message"
            android:textSize="22sp"
            android:textColor="@color/orange"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirmation_message_1"
            android:id="@+id/confirmation_message_1"
            android:layout_below="@id/thankful_message"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/confirmation_message_2"
            android:id="@+id/confirmation_message_2"
            android:layout_below="@id/confirmation_message_1"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/thankyou_message"
            android:id="@+id/thankyou_message"
            android:layout_below="@id/confirmation_message_2"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/back_to_home_button"
            android:layout_below="@id/thankyou_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home_button"
            android:background="@color/darkYellow"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center"/>

    </RelativeLayout>


</LinearLayout>