<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_request_sell_customer"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/add_customer_name_icon"
        android:src="@drawable/ic_add_customer_name"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/input_customer_name"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:hint="@string/add_customer_name"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:inputType="text"/>

    <ImageView
        android:id="@+id/add_customer_address_icon"
        android:src="@drawable/ic_add_customer_address"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_customer_address"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:hint="@string/add_customer_address"
        android:layout_marginTop="110dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/add_customer_email_icon"
        android:src="@drawable/ic_add_customer_email"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="185dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_customer_email"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:hint="@string/add_customer_email"
        android:layout_marginTop="185dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:inputType="text" />

    <ImageView
        android:id="@+id/add_customer_phone_icon"
        android:src="@drawable/ic_add_customer_phone"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="10dp" />

    <EditText
        android:id="@+id/input_customer_phone_number"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:hint="@string/add_customer_phone"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="20dp"
        android:inputType="number"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:text="@string/request_for_sell_button"
        android:id="@+id/request_sell_button"
        android:textSize="23sp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
