<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/customer_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:background="@drawable/border" >
        <ImageView
            android:id="@+id/add_customer_name_icon"
            android:src="@drawable/ic_add_customer_name"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignBottom="@+id/inputCustomerName"
            android:layout_toLeftOf="@+id/inputProductCategory"
            android:layout_toStartOf="@+id/inputProductCategory" />

        <EditText
            android:id="@+id/inputCustomerName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/add_customer_name"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/add_customer_name_icon"
            android:layout_toEndOf="@+id/add_customer_name_icon"
            android:layout_marginTop="46dp" />

        <ImageView
            android:id="@+id/add_customer_address_icon"
            android:src="@drawable/ic_add_customer_address"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="46dp"
            android:layout_below="@+id/add_customer_name_icon"
            android:layout_toLeftOf="@+id/inputCustomerEmail"
            android:layout_toStartOf="@+id/inputCustomerEmail" />

        <EditText
            android:id="@+id/inputCustomerAddress"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/add_customer_address"
            android:layout_alignBottom="@+id/add_customer_address_icon"
            android:layout_toRightOf="@+id/add_customer_address_icon"
            android:layout_toEndOf="@+id/add_customer_address_icon" />

        <ImageView
            android:id="@+id/add_customer_email_icon"
            android:src="@drawable/ic_add_customer_email"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_below="@+id/add_customer_address_icon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="46dp"/>

        <EditText
            android:id="@+id/inputCustomerEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/add_customer_email"
            android:layout_alignBottom="@+id/add_customer_email_icon"
            android:layout_toRightOf="@+id/add_customer_email_icon"
            android:layout_toEndOf="@+id/add_customer_email_icon" />

        <ImageView
            android:id="@+id/add_customer_phone_icon"
            android:src="@drawable/ic_add_customer_phone"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/add_customer_email_icon"
            android:layout_alignRight="@+id/add_customer_email_icon"
            android:layout_alignEnd="@+id/add_customer_email_icon" />

        <EditText
            android:id="@+id/inputCustomerPhone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/add_customer_phone"
            android:layout_alignTop="@+id/add_customer_phone_icon"
            android:layout_toRightOf="@+id/add_customer_phone_icon"
            android:layout_toEndOf="@+id/add_customer_phone_icon"
            android:inputType="number"/>

        <Button
            android:layout_width="355dp"
            android:layout_height="55dp"
            android:text="@string/checkout_button"
            android:id="@+id/checkout_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="7dp"
            android:textSize="23sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to"
            android:id="@+id/textView6"
            android:textColor="@color/gray"
            android:layout_marginTop="7dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/button"
            android:layout_alignStart="@+id/button"
            android:textSize="18sp"/>
    </RelativeLayout>

</LinearLayout>