<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/add_product_photos"
                    android:src="@drawable/region_add_product_photos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_alignBottom="@+id/input_product_name"
                    android:layout_marginBottom="65dp"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:id="@+id/add_product_name_icon"
                    android:src="@drawable/ic_add_product_name"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="210dp"/>

                <EditText
                    android:id="@+id/input_product_name"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:hint="@string/add_product_name"
                    android:layout_marginTop="195dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="20dp"
                    android:inputType="text"
                    android:textSize="16dp"/>

                <ImageView
                    android:id="@+id/add_product_category_icon"
                    android:src="@drawable/ic_add_product_category"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="270dp" />

                <Spinner
                    android:id="@+id/input_product_category_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="30dp"
                    android:hint="@string/add_product_category"
                    android:layout_marginTop="265dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="20dp"
                    android:inputType="text"
                    android:entries="@array/rs_category_spinner"
                    android:textSize="16dp"/>

                <View
                    android:id="@+id/rs_category_spinner_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    android:layout_below="@+id/input_product_category_spinner"
                    android:layout_alignRight="@+id/input_product_category_spinner"
                    android:layout_marginLeft="60dp"/>

                <ImageView
                    android:id="@+id/add_product_price_icon"
                    android:src="@drawable/ic_add_product_price"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="340dp" />

                <EditText
                    android:id="@+id/input_product_price"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:hint="@string/add_product_price"
                    android:layout_marginTop="325dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="20dp"
                    android:inputType="number"
                    android:textSize="16dp"/>

                <TextView
                    android:id="@+id/vnd_textView"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="đ"
                    android:layout_marginTop="335dp"
                    android:layout_alignRight="@+id/input_product_price"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/add_exchange_address_icon"
                    android:src="@drawable/ic_add_exchange_address"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="410dp"/>

                <EditText
                    android:id="@+id/input_place_exchange"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:hint="@string/add_exchange_address"
                    android:layout_marginTop="395dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="20dp"
                    android:inputType="text"
                    android:textSize="16dp" />

                <ImageView
                    android:id="@+id/add_product_detail"
                    android:src="@drawable/ic_add_product_detail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="475dp"/>

                <EditText
                    android:id="@+id/input_product_description"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:hint="@string/add_product_description"
                    android:layout_marginTop="460dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textMultiLine"
                    android:textSize="16dp"/>

                <Button
                    android:id="@+id/request_sell_product_button_continue"
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:text="@string/continue_button"
                    android:textSize="23sp"
                    android:textStyle="bold"
                    android:layout_below="@+id/input_product_description"
                    android:layout_marginTop="25dp"
                    android:background="@color/colorPrimary" />

            </RelativeLayout>
    </ScrollView>
</RelativeLayout>